--- a/index.html
+++ b/index.html
@@ -4,68 +4,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <title>Document</title>
+  <title>Esercizio 2</title>
 </head>
 <body>
-  <div class="container-fluid mt-3">
-    <div class="row">
-      <div class="col p-2"></div>
-      <div class="col p-6">
-        <table class="table">
-          <tr>
-            <td>
-              <img src="https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/cddf7b8eabf65af48ae0527d/6921619700_1_1_16.jpg" width="100%">
-            </td>
-            <td>
-              <h5 style="font-family:pt sans">Sample Headline</h5>
-              <p style="color:#999999; font-family:open sans, sans-serif"><i>Sample text. Click to select the text box. Click again or double click to start editing the text.</i></p>
-              <h3 style="font-family:open sans"><b>$200</b></h3>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img src="https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/475fc6a7a95d5ccd9b12e945/6903603702_1_1_16.jpg" width="100%">
-            </td>
-            <td>
-              <h5 style="font-family:pt sans">Sample Headline</h5>
-              <p style="color:#999999; font-family:open sans, sans-serif"><i>Sample text. Click to select the text box. Click again or double click to start editing the text.</i></p>
-              <h3 style="font-family:open sans"><b>$300</b></h3>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img src="https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/6a2af5f349d85d83bebfe88d/6903603800_1_1_16.jpg" width="100%">
-            </td>
-            <td>
-              <h5 style="font-family:pt sans">Sample Headline</h5>
-              <p style="color:#999999; font-family:open sans, sans-serif"><i>Sample text. Click to select the text box. Click again or double click to start editing the text.</i></p>
-              <h3 style="font-family:open sans"><b>$250</b></h3>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="col p-6">
-        <table>
-          <tr>
-            <td style="valign:middle">
-              <h1 style="font-family:playfair">SUMMER</h1>
-              <h4style="font-family:pt sans">O  u  t  f  i  t    I  n  s  p  i  r  a  t  i  o  n</h4style>
-              <p style="font-family:open sans"><i>New season, new wardrobe. As the temperatures continue to rise, have your style follow suit and revamp your racks with fresh, elevated summer looks.</i></p>
-              <button type="button" class="btn btn-dark" style="border-radius:0; font-family:open sans">READ MORE</button>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="col p-2"></div>
-    </div>
-    <div class="row">
-      <div class="col-sm-4  p-4 bg-dark text-white"></div>
-      <div class="col-sm-4  p-4 bg-dark text-white text-align-cemter">
-        <p style="font-family:open sans; color:#eaedfd"><u>Template</u> created with <u>Nicepage.</u></p>
-      </div>
-      <div class="col-sm-4  p-4 bg-dark text-white"></div>
-    </div>
-  </div>
+  <h2 id="titolo">Titoletto</h2>
+  <p><i>dialogo del primo paragrafo</i></p>
+  <p><b>risposta alla prima domanda</b></p>
+  <p>frase di conclusione</p>
+  <br>
+  <br>
+  <h2 id="p1">Paragrafo uno</h2>
+  <img src="https://shop.24voglie.it/216-large_default/vassoio-pasticcini-misti.jpg" style="width:700px;">
+  <br>
+  <br>
+  <br>
+  <br>
+  <h2 id="p2">Paragrafo due</h2>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h2 id="p3">Paragrafo tre</h2>
+  <br>
+  <br>
+  <br>
+  <br>
+  <a href="titolo">titolo</a>
+  <a href="p1">titolo</a>
+  <a href="p2">titolo</a>
+  <a href="p3">titolo</a>
 </body>
 </html>
