--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Esercizio 2</title>
+  <link re="stylesheet" href="stile.css">
 </head>
 <body>
   <h2 id="titolo">Titoletto</h2>
