--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <br>
   <br>
   <h2 id="p1">Paragrafo uno</h2>
+  <center>
   <img src="https://shop.24voglie.it/216-large_default/vassoio-pasticcini-misti.jpg" style="width:700px" align="center">
+  </center>
   <br>
   <br>
   <br>
